# changemetrics.io

./: .gitignore  CNAME  LICENSE  README.md  about.html  about.md  about.rst  archive.html  changemetrics-io.cabal  contact.markdown  default.nix  flake.nix  index.html  index.md  shell.nix  site.hs
.github/workflows/: main.yaml
css/: default.css
docs/: about.html
images/: oauth.plantuml
posts/: 2021-06-01-haskell-use-cases.html  2021-06-01-haskell-use-cases.md  2021-06-12-servant-oauth.html  2021-06-12-servant-oauth.md  2021-07-06-v1-roadmap.html  2021-07-06-v1-roadmap.md  2021-09-21-version-1.1-release.html  2021-09-21-version-1.1-release.md  2021-10-28-version-1.2.1-release.html  2021-10-28-version-1.2.1-release.md  2021-12-02-version-1.3.0-release.html  2021-12-02-version-1.3.0-release.md  2022-01-05-review-workflow.html  2022-01-05-review-workflow.md  2022-01-31-version-1.4.0-release.html  2022-01-31-version-1.4.0-release.md  2022-04-04-version-1.5.0-release.html  2022-04-04-version-1.5.0-release.md  2022-06-20-version-1.6.0-release.html  2022-06-20-version-1.6.0-release.md  2022-09-19-version-1.7.0-release.html  2022-09-19-version-1.7.0-release.md  2022-11-28-version-1.8.0-release.html  2022-11-28-version-1.8.0-release.md  2023-09-17-version-1.9.0-release.html  2023-09-17-version-1.9.0-release.md  2023-11-07-version-1.10.0-release.html  2023-11-07-version-1.10.0-release.md  2023-11-07-version-1.11.0-release.html  2023-11-07-version-1.11.0-release.md
templates/: default.html
