cabal-version:       3.0
name:                changemetrics-io
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/changemetrics-io#readme
license:             CC-BY-4.0
license-file:        LICENSE
author:              Tristan de Cacqueray
maintainer:          tdecacqu@redhat.com
copyright:           2021 Monocle authors
category:            Web
build-type:          Simple
extra-source-files:  README.md

executable changemetrics-io
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -dynamic
  build-depends:       base >= 4.7 && < 5,
                       hakyll,
                       pandoc,
                       pandoc-types
